--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="card">
           <h1 class="title">Gramify</h1>
-          <p class="text">Select text on any webpage and press <span class="text-bold">Alt+G</span> (or <span class="text-bold">Option+G</span> on Mac) to fix grammar mistakes.</p>
+          <p class="text">Select text on any webpage and press <span class="text-bold">Ctrl+G</span> (or <span class="text-bold">Command+G</span> on Mac) to fix grammar mistakes.</p>
         </div>
       </div>
     </div>
