--- a/Grami.html
+++ b/Grami.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gramify - Grammar Correction Extension</title>
     <style>
@@ -49,7 +48,7 @@
       <div class="container">
         <div class="card">
           <h1 class="title">Gramify</h1>
-          <p class="text">Select text on any webpage and press <span class="text-bold">Ctrl+G</span> (or <span class="text-bold">Command+G</span> on Mac) to fix grammar mistakes.</p>
+          <p class="text">Select text on any webpage and press <span class="text-bold">Ctrl+K</span> (or <span class="text-bold">Command+K </span> on Mac) to fix grammar mistakes.</p>
         </div>
       </div>
     </div>
