--- a/Grami.html
+++ b/Grami.html
@@ -53,5 +53,6 @@
       </div>
     </div>
     <script type="module" src="/src/main.js"></script>
+    <script type="text/javascript" src="src/libs/button.prod.min.js" data-name="bmc-button" data-slug="Franktheft21" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
   </body>
 </html>
